--- a/html-css/proyecto-barberia/css/style.css
+++ b/html-css/proyecto-barberia/css/style.css
@@ -1,10 +1,15 @@
-body{
-    background: #cccccc;
+
+.titulo-principal{
+    padding-left: 30px;
 }
 #banner{
     width: 100%;
 }
-h1{
+.principal{
+    background: #cccccc;
+    padding: 20px;
+}
+.titulo-centralizado{
     text-align: center;
 }
 p{
@@ -16,8 +21,22 @@ em strong{
 #mision{
     font-size: 20px
 }
+
+.diferenciales{
+    background: #FFFFFF;
+    padding: 30px;
+}
+ul{
+    display:inline-block;  /*ocupe solo su contenido no todo el bloque*/
+    vertical-align: top;     /*alineamiento vertical parte superior foto*/
+    width: 20%;  /*ocupe el 20% de la pantalla*/
+    margin-right: 15%;
+}
 .items{
     font-style: italic;
+}
+.imagenDiferenciales{
+    width: 50%;
 }
 
 /*r r g g b b color   negro 0 1 2 3 4 5 6 7 8 9 A B C D E F   blanco o perdida de color
