--- a/html-css/proyecto-barberia/css/style-home.css
+++ b/html-css/proyecto-barberia/css/style-home.css
@@ -1,7 +1,34 @@
 
-.titulo-principal{
-    padding-left: 30px;
+header{
+    background-color: #BBBBBB;
+    padding: 20px;
 }
+.caja{
+    width: 940px;
+    position: relative;
+    margin: 0 auto;  /*0 superior e inferior, auto bordes*/
+}
+nav{
+    position:absolute;  /*por default static, absolute se puede ubicar en cualquier parte de la pag*/ 
+    top: 110px;
+    right: 0;
+}
+nav li{
+    display: inline;
+    margin: 0 0 0 15px;  /*top right bottom left*/
+}
+nav a {
+    text-transform: uppercase; /*letras en mayúsculas*/
+    color:#000000;  /*color de las letras */
+    font-weight: bold;  /*negritas letras*/
+    font-size: 22px;
+    text-decoration: none; /*quitar subrayado link*/
+}
+nav a:hover{    /*captura el movimiento del mouse*/
+    color: #c78c19;
+    text-decoration: underline; /*subrayado*/
+}
+
 #banner{
     width: 100%;
 }
@@ -42,3 +69,14 @@ ul{
 /*r r g g b b color   negro 0 1 2 3 4 5 6 7 8 9 A B C D E F   blanco o perdida de color
 rgb(0,0,0)  0= menor 255=max     
 color rojo con el nombre red, el hexadecimal #FF0000 y el RGB rgb(255,0,0)*/
+
+footer{
+    text-align: center;
+    background: url(/img/bg.jpg);  /*repite la imagen n veces*/
+    padding: 40px;
+}
+.copyright{
+    color: #FFFFFF;
+    font-size: 13px;
+    margin: 20px;
+}
