--- a/html-css/proyecto-barberia/css/style.css
+++ b/html-css/proyecto-barberia/css/style.css
@@ -142,3 +142,31 @@ td, th{
     padding: 8px 15px;
 }
 
+
+/*css para nuestra página inicial*/
+.banner{
+    width: 100%;
+}
+.titulo-principal{
+    text-align: center;
+    font-size: 2em; /*2 veces 15 pixeles tamaño de la fuente*/
+    margin: 0 0 1em;   /*distancia superior inferior margen*/
+    clear:left;  /*imagen no aplique a los títulos*/
+}
+.principal p{
+    margin: 0 0 1em;
+}
+.principal strong{
+    font-weight: bold;
+}
+.principal em{
+    font-style: italic;
+}
+.utensilios{
+    width: 120px;
+    float: left;
+    margin: 0 20px 20px 0;
+}
+.imagenDiferenciales{
+    width: 60%;
+}
