--- a/html-css/proyecto-barberia/css/style.css
+++ b/html-css/proyecto-barberia/css/style.css
@@ -1,3 +1,7 @@
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+
 header{
     background-color: #BBBBBB;
     padding: 20px;
@@ -170,3 +174,5 @@ td, th{
 .imagenDiferenciales{
     width: 60%;
 }
+
+
