--- a/html-css/proyecto-barberia/css/style.css
+++ b/html-css/proyecto-barberia/css/style.css
@@ -180,7 +180,19 @@ td, th{
     text-align: center;
 }
 
-.imagenDiferenciales{
+.contenido-diferenciales{
+    width: 640px;
+    margin: 0 auto;
+}
+.lista-diferenciales{
+    width: 40%;
+    display: inline-block;  /*viene por defecto display: block; */
+    vertical-align: top;
+}
+.items{
+    line-height: 1.5; /*50% fuente espacios */
+}
+.imagen-diferenciales{
     width: 60%;
 }
 
