--- a/html-css/proyecto-barberia/css/style.css
+++ b/html-css/proyecto-barberia/css/style.css
@@ -246,3 +246,17 @@ p:first-line{           /*alterar la primera línea del parrafo
 }
 
 
+@media screen and (max-width:480px){
+    h1{
+        text-align: center;
+    }
+    nav{
+        position: static;
+    }
+    .caja, .principal, .mapa-contenido, .contenido-diferenciales, .video {
+        width: auto;
+    }
+    .lista-diferenciales, .imagen-diferenciales{
+        width: 100%;
+    }
+}
